removed grid. Fixed overflow.

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,29 +1,21 @@
-@import "tailwindcss/base";
-/* @import "./custom-base-styles.css"; */
-
-@import "tailwindcss/components";
-/* @import "./custom-components.css"; */
-
-@import "tailwindcss/utilities";
-/* @import "./custom-utilities.css"; */
-
-/* Your own custom utilities */
 @import url("https://fonts.googleapis.com/css2?family=Scheherazade&display=swap");
 
-@layer utilities {
-  .rtl {
-    direction: rtl;
-  }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.rtl {
+  direction: rtl;
 }
 
 /* If in need of different SVG sizes at different viewpoints. Add below */
-@layer components {
-  /* Checkbox in menu style */
-  .btn-check {
-    @apply form-checkbox appearance-none border-black border-solid border-2 rounded-md text-green-500 checked:border-green-700 checked:border-transparent;
-  }
+/* Checkbox in menu style */
+.btn-check {
+  @apply form-checkbox appearance-none border-black border-solid border-2 rounded-md text-green-500 checked:border-green-700 checked:border-transparent;
+}
 
-  /* .svg-sizes {
-    @apply sm:;
-  } */
+@layer base {
+  body {
+    @apply bg-gray-10;
+  }
 }
